--- a/arquillian/pom.xml
+++ b/arquillian/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.richfaces</groupId>
         <artifactId>richfaces-root-parent</artifactId>
-        <version>4.3.9-SNAPSHOT</version>
+        <version>4.3.9.ayg</version>
         <relativePath>../parent</relativePath>
     </parent>
 
